# Numerical-Methods-Labs

./: .gitignore  CODE_OF_CONDUCT.md  README.md  SECURITY.md  compose.yaml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: deploy-client.yml
api/: Dockerfile  README.md  pyproject.toml
api/api/: constants.py  main.py
api/core/functions/: newtons_method.py  numerical_operation.py  simple_iteration.py
api/core/helpers/: get_plot_limits.py  validate_expression.py
api/core/integration/: rectangles_rule.py  simpsons_rule.py  trapezoidal_rule.py
api/core/interpolation/: lagranges_interpolation_method.py  newtons_interpolation_method.py
api/core/linear_systems/: fixed_point_iteration_system.py  gaussian_elimination_method.py  least_squares_method.py
api/core/non_linear/: fixed_point_iteration_method.py  newtons_method.py  secant_method.py
api/helpers/: server_load.py
api/tests/: api_test.http
client/: .dockerignore  .pnp.cjs  .prettierrc.js  Dockerfile  README.md  angular.json  package.json  tsconfig.json
client/src/: index.html
client/src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.component.ts  app.config.ts  app.module.ts
client/src/app/about/: about.component.html  about.component.scss  about.component.ts  about.module.ts
client/src/app/core/: core.module.ts
client/src/app/lab/: lab-routing.module.ts  lab.component.html  lab.component.scss  lab.component.ts  lab.module.ts  lab.ts
client/src/app/settings/: settings.component.html  settings.component.ts  (+2 more)
client/src/theme/: styles.scss
(+78 files in other folders)
